--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,5 @@
-<html lang="fr">
+
+
 
 	<head>
 		<!-- Required meta tags -->
@@ -42,7 +43,7 @@
 					<div class="row align-items-center justify-content-center">
 						<div class="col-lg-12">
 							<nav class="navbar navbar-expand-lg navbar-light">
-								<a class="navbar-brand" href="{{ asset ('index.html')}}">
+								<a class="navbar-brand" href="{{ path ('index.html')}}">
 									<img src="{{ asset ('img/logo.png')}}" alt="logo">
 								</a>
 								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,13 +55,13 @@
 								<div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
 									<ul class="navbar-nav">
 										<li class="nav-item">
-											<a class="nav-link" href="{{ asset ('index.html')}}">Accueil</a>
+											<a class="nav-link" href="{{ path ('index.html')}}">Accueil</a>
 										</li>
 										<li class="nav-item">
-											<a class="nav-link" href="{{ asset ('about.html')}}">a propos</a>
+											<a class="nav-link" href="{{ path ('about.html')}}">a propos</a>
 										</li>
 										<li class="nav-item dropdown">
-											<a class="nav-link dropdown-toggle" href="{{ asset ('blog.html')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 												produits
 											</a>
 											<div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
@@ -70,34 +71,34 @@
 											</div>
 										</li>
 										<li class="nav-item dropdown">
-											<a class="nav-link dropdown-toggle" href="{{ asset ('blog.html')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 												pages
 											</a>
 											<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-												<a class="dropdown-item" href="{{ asset ('login.html')}}">
+												<a class="dropdown-item" href="{{ path ('login.html')}}">
 													S'enregistrer
 
 												</a>
-												<a class="dropdown-item" href="{{ asset ('checkout.html')}}">Panier</a>
-												<a class="dropdown-item" href="{{ asset ('cart.html')}}">Mes achats</a>
-												<a class="dropdown-item" href="{{ asset ('confirmation.html')}}">Confirmer</a>
-												<a class="dropdown-item" href="{{ asset ('elements.html')}}">elements</a>
+												<a class="dropdown-item" href="{{ path ('checkout.html')}}">Panier</a>
+												<a class="dropdown-item" href="{{ path ('cart.html')}}">Mes achats</a>
+												<a class="dropdown-item" href="{{ path ('confirmation.html')}}">Confirmer</a>
+												<a class="dropdown-item" href="{{ path ('elements.html')}}">elements</a>
 											</div>
 										</li>
 										<li class="nav-item dropdown">
-											<a class="nav-link dropdown-toggle" href="{{ asset ('blog.html')}}" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 												Agenda
 											</a>
 											<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-												<a class="dropdown-item" href="{{ asset ('blog.html')}}">
+												<a class="dropdown-item" href="{{ path ('blog.html')}}">
 													Agenda</a>
-												<a class="dropdown-item" href="{{ asset ('single-blog.html')}}">Commentaires</a>
+												<a class="dropdown-item" href="{{ path ('single-blog.html')}}">Commentaires</a>
 											</div>
 										</li>
 
 
 										<li class="nav-item">
-											<a class="nav-link" href="{{ asset ('contact.html')}}">Contact</a>
+											<a class="nav-link" href="{{ path ('contact.html')}}">Contact</a>
 										</li>
 									</ul>
 								</div>
@@ -105,7 +106,7 @@
 									<a id="search_1" href="{{ asset ('javascript:void(0)')}}">
 										<i class="ti-search"></i>
 									</a>
-									<a href="{{ asset ('cart.html')}}">
+									<a href="{{ path ('cart.html')}}">
 										<i class="flaticon-shopping-cart-black-shape"></i>
 									</a>
 								</div>
@@ -125,7 +126,17 @@
 			<span class="ti-close" id="close_search" title="Close Search"></span>
 		</form>
 	</div>
-</div></body></html></header><!-- Header part end-->{% endblock %}{% block main %}<!-- banner part start--><section class="banner_part"><div class="container"><div class="row align-items-center">
+</div>
+</body>
+</html>
+</header>
+<!-- Header part end-->
+{% endblock %}
+{% block main %}
+<!-- banner part start-->
+<section class="banner_part">
+<div class="container">
+<div class="row align-items-center">
 <div class="col-md-5">
 	<div class="banner_text">
 		<div class="banner_text_iner">
@@ -134,7 +145,16 @@
 			<a href="{{ asset ('product_list.html')}}" class="btn_1">découvrir</a>
 		</div>
 	</div>
-</div></div></div><div class="banner_img"><img src="{{ asset ('img/gal-1.jpeg')}}" alt="#" class="img-fluid"></div></section><!-- banner part start--><!-- product list start--><section class="single_product_list"><div class="container"><div class="row">
+</div>
+</div>
+</div>
+<div class="banner_img"><img src="{{ asset ('img/gal-1.jpeg')}}" alt="#" class="img-fluid">
+</div>
+</section>
+<!-- banner part start-->
+<!-- product list start-->
+<section class="single_product_list">
+<div class="container"><div class="row">
 <div class="col-lg-12">
 	<div class="single_product_iner">
 		<div class="row align-items-center justify-content-between">
@@ -148,8 +168,7 @@
 				<div class="single_product_content">
 
 					<h2>
-						<a href="{{ asset ('single-product.html')}}">Issue des quatre coins de la planète de l'ouest à l'est, du nord au sud en passant par nos boutiques
-						</a>
+						<a href="{{ asset ('single-product.html')}}">Issue des quatre coins de la planète de l'ouest à l'est, du nord au sud en passant par nos boutiques</a>
 					</h2>
 					<a href="{{ asset ('product_list.html')}}" class="btn_3">Ici</a>
 				</div>
@@ -166,7 +185,6 @@
 			</div>
 			<div class="col-lg-5 col-sm-6">
 				<div class="single_product_content">
-
 					<h2>
 						<a href="{{ asset ('single-product.html')}}">A coeur ouvert de vous satisfaire</a>
 					</h2>
@@ -194,12 +212,22 @@
 			</div>
 		</div>
 	</div>
-</div></div></div></section><!-- product list end--><!-- trending item start--><section class="trending_items"><div class="container"><div class="row">
+</div>
+</div>
+</div>
+</section>
+<!-- product list end-->
+<!-- trending item start-->
+<section class="trending_items">
+<div class="container">
+<div class="row">
 <div class="col-lg-12">
 	<div class="section_tittle text-center">
 		<h2>Produits du moment</h2>
 	</div>
-</div></div><div class="row">
+</div>
+</div>
+<div class="row">
 <div class="col-lg-4 col-sm-6">
 	<div class="single_product_item">
 		<div class="single_product_item_thumb">
@@ -217,7 +245,6 @@
 		<h3>
 			<a href="{{ asset ('single-product.html')}}">Arbre à thé</a>
 		</h3>
-
 	</div>
 </div>
 <div class="col-lg-4 col-sm-6">
@@ -226,7 +253,6 @@
 		<h3>
 			<a href="{{ asset ('single-product.html')}}">Lavande vraie</a>
 		</h3>
-
 	</div>
 </div>
 <div class="col-lg-4 col-sm-6">
@@ -235,7 +261,6 @@
 		<h3>
 			<a href="{{ asset ('single-product.html')}}">Diffuse respi</a>
 		</h3>
-
 	</div>
 </div>
 <div class="col-lg-4 col-sm-6">
@@ -244,7 +269,6 @@
 		<h3>
 			<a href="{{ asset ('single-product.html')}}">Gel antibactérien</a>
 		</h3>
-
 	</div>
 </div>
 <div class="col-lg-4 col-sm-6">
@@ -253,7 +277,6 @@
 		<h3>
 			<a href="{{ asset ('single-product.html')}}">aCerola vitamine C</a>
 		</h3>
-
 	</div>
 </div>
 </div>
@@ -288,7 +311,15 @@
 			<h5>- Guillaume -</h5>
 		</div>
 	</div>
-</div></div></div></section><!-- client review part end --><!-- feature part here --><section class="feature_part section_padding"><div class="container"><div class="row justify-content-between">
+</div>
+</div>
+</div
+></section>
+<!-- client review part end -->
+<!-- feature part here -->
+<section class="feature_part section_padding">
+<div class="container">
+<div class="row justify-content-between">
 <div class="col-lg-6">
 	<div class="feature_part_tittle">
 		<h3>Innover de manière crédible les sources granulaires internes ou organiques</h3>
@@ -298,7 +329,9 @@
 	<div class="feature_part_content">
 		<p>Renforcer en toute transparence des stratégies de croissance bien étudiées et des sources biologiques et organiques.</p>
 	</div>
-</div></div><div class="row justify-content-center">
+</div>
+</div>
+<div class="row justify-content-center">
 <div class="col-lg-3 col-sm-6">
 	<div class="single_feature_part">
 		<img src="{{ asset ('img/icon/feature_icon_1.svg')}}" alt="#">
@@ -322,7 +355,15 @@
 		<img src="{{ asset ('img/icon/feature_icon_4.svg')}}" alt="#">
 		<h4>carte cadeaux</h4>
 	</div>
-</div></div></div></section><!-- feature part end --><!-- subscribe part here --><section class="subscribe_part section_padding"><div class="container"><div class="row justify-content-center">
+</div>
+</div>
+</div>
+</section>
+<!-- feature part end -->
+<!-- subscribe part here -->
+<section class="subscribe_part section_padding">
+<div class="container">
+<div class="row justify-content-center">
 <div class="col-lg-8">
 	<div class="subscribe_part_content">
 		<h2>Tiens toi au courant !</h2>
@@ -332,20 +373,31 @@
 			<a href="{{ asset ('#" class="btn_1')}}">Envoyer</a>
 		</div>
 	</div>
-</div></div></div></section><!-- subscribe part end -->{% endblock %}{% block footer %}<!--::footer_part start::--><footer class="footer_part"><div class="footer_iner"><div class="container">
+</div>
+</div>
+</div>
+</section>
+<!-- subscribe part end -->
+{% endblock %}
+{% block footer %}
+<!--::footer_part start::-->
+<footer class="footer_part">
+<div class="footer_iner">
+<div class="container">
 <div class="row justify-content-between align-items-center">
 	<div class="col-lg-8">
 		<div class="footer_menu">
 			<div
-				class="footer_logo"><!--       <a href="{{ asset ('index.html')}}"><img src="{{ asset ('img/logo.png')}}" alt="#"></a> -->
+				class="footer_logo">
+				<!-- <a href="{{ path ('index.html')}}"><img src="{{ asset ('img/logo.png')}}" alt="#"></a> -->
 			</div>
 			<div class="footer_menu_item">
-				<a href="{{ asset ('index.html')}}">Accueil</a>
-				<a href="{{ asset ('about.html')}}">A propos</a>
-				<a href="{{ asset ('product_list.html')}}">Produits</a>
+				<a href="{{ path ('index.html')}}">Accueil</a>
+				<a href="{{ path ('about.html')}}">A propos</a>
+				<a href="{{ path ('product_list.html')}}">Produits</a>
 				<a href="{{ asset ('#')}}">Pages</a>
-				<a href="{{ asset ('blog.html')}}">Agenda</a>
-				<a href="{{ asset ('contact.html')}}">Contact</a>
+				<a href="{{ path ('blog.html')}}">Agenda</a>
+				<a href="{{ path ('contact.html')}}">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -365,7 +417,11 @@
 			</a>
 		</div>
 	</div>
-</div></div></div><div class="copyright_part"><div class="container">
+</div>
+</div>
+</div>
+<div class="copyright_part">
+<div class="container">
 <div class="row ">
 	<div class="col-lg-12">
 		<div class="copyright_text">
@@ -385,4 +441,44 @@
 			</div>
 		</div>
 	</div>
-</div></div></div></footer><!--::footer_part end::-->{% endblock %}{% block javascript %}<!-- jquery plugins here--><script src="{{ asset ('js/jquery-1.12.1.min.js')}}"></script><!-- popper js --><script src="{{ asset ('js/popper.min.js')}}"></script><!-- bootstrap js --><script src="{{ asset ('js/bootstrap.min.js')}}"></script><!-- magnific popup js --><script src="{{ asset ('js/jquery.magnific-popup.js')}}"></script><!-- carousel js --><script src="{{ asset ('js/owl.carousel.min.js')}}"></script><script src="{{ asset ('js/jquery.nice-select.min.js')}}"></script><!-- slick js --><script src="{{ asset ('js/slick.min.js')}}"></script><script src="{{ asset ('js/jquery.counterup.min.js')}}"></script><script src="{{ asset ('js/waypoints.min.js')}}"></script><script src="{{ asset ('js/contact.js')}}"></script><script src="{{ asset ('js/jquery.ajaxchimp.min.js')}}"></script><script src="{{ asset ('js/jquery.form.js')}}"></script><script src="{{ asset ('js/jquery.validate.min.js')}}"></script><script src="{{ asset ('js/mail-script.js')}}"></script><!-- custom js --><script src="{{ asset ('js/custom.js')}}"></script>{% endblock %}</body></html>
+</div>
+</div>
+</div>
+</footer>
+<!--::footer_part end::-->
+{% endblock %}
+{% block javascript %}
+<!-- jquery plugins here-->
+<script src="{{ asset ('js/jquery-1.12.1.min.js')}}">
+</script>
+<!-- popper js -->
+<script src="{{ asset ('js/popper.min.js')}}">
+</script><!-- bootstrap js -->
+<script src="{{ asset ('js/bootstrap.min.js')}}">
+</script><!-- magnific popup js -->
+<script src="{{ asset ('js/jquery.magnific-popup.js')}}">
+</script><!-- carousel js -->
+<script src="{{ asset ('js/owl.carousel.min.js')}}">
+</script><script src="{{ asset ('js/jquery.nice-select.min.js')}}">
+</script><!-- slick js --><script src="{{ asset ('js/slick.min.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.counterup.min.js')}}">
+</script>
+<script src="{{ asset ('js/waypoints.min.js')}}">
+</script>
+<script src="{{ asset ('js/contact.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.ajaxchimp.min.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.form.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.validate.min.js')}}">
+</script>
+<script src="{{ asset ('js/mail-script.js')}}">
+</script>
+<!-- custom js -->
+<script src="{{ asset ('js/custom.js')}}">
+</script>
+
+</body>
+{% endblock %}
