--- a/templates/pirate/index.html.twig
+++ b/templates/pirate/index.html.twig
@@ -1,20 +1,487 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Hello PirateController!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% extends "base.html.twig" %}
+{% block head %}
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>L'arômes des sens</title>
+		<link
+		rel="icon" href="{{ asset ('img/tree.png')}}">
+		<!-- Bootstrap CSS -->
+		<link
+		rel="stylesheet" href="{{ asset ('css/bootstrap.min.css')}}">
+		<!-- animate CSS -->
+		<link
+		rel="stylesheet" href="{{ asset ('css/animate.css')}}">
+		<!-- owl carousel CSS -->
+		<link
+		rel="stylesheet" href="{{ asset ('css/owl.carousel.min.css')}}">
+		<!-- font awesome CSS -->
+		<link
+		rel="stylesheet" href="{{ asset ('css/all.css')}}">
+		<!-- flaticon CSS -->
+		<link rel="stylesheet" href="{{ asset ('css/flaticon.css')}}">
+		<link
+		rel="stylesheet" href="{{ asset ('css/themify-icons.css')}}">
+		<!-- font awesome CSS -->
+		<link
+		rel="stylesheet" href="{{ asset ('css/magnific-popup.css')}}">
+		<!-- swiper CSS -->
+		<link
+		rel="stylesheet" href="{{ asset ('css/slick.css')}}">
+		<!-- style CSS -->
+		<link rel="stylesheet" href="{{ asset ('css/style.css')}}">
+	</head>
+{% endblock %}
+	{% block body %}
+    <body></body>
+    {% endblock %}
+		<!--::header part start::-->
+		{% block header %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+			<header class="main_menu home_menu">
+				<div class="container">
+					<div class="row align-items-center justify-content-center">
+						<div class="col-lg-12">
+							<nav class="navbar navbar-expand-lg navbar-light">
+								<a class="navbar-brand" href="{{ path ('index.html')}}">
+									<img src="{{ asset ('img/logo.png')}}" alt="logo">
+								</a>
+								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+									<span class="menu_icon">
+										<i class="fas fa-bars"></i>
+									</span>
+								</button>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/pirate/src/Controller/PirateController.php'|file_link(0) }}">src/Controller/PirateController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/pirate/templates/pirate/index.html.twig'|file_link(0) }}">templates/pirate/index.html.twig</a></code></li>
-    </ul>
+								<div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+									<ul class="navbar-nav">
+										<li class="nav-item">
+											<a class="nav-link" href="{{ path ('index.html')}}">Accueil</a>
+										</li>
+										<li class="nav-item">
+											<a class="nav-link" href="{{ path ('about.html')}}">a propos</a>
+										</li>
+										<li class="nav-item dropdown">
+											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+												produits
+											</a>
+											<div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+												<a class="dropdown-item" href="{{ asset ('product_list.html')}}">
+													liste de produits</a>
+												<a class="dropdown-item" href="{{ asset ('single-product.html')}}">Détails des produits</a>
+											</div>
+										</li>
+										<li class="nav-item dropdown">
+											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+												pages
+											</a>
+											<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+												<a class="dropdown-item" href="{{ path ('login.html')}}">
+													S'enregistrer
+
+												</a>
+												<a class="dropdown-item" href="{{ path ('checkout.html')}}">Panier</a>
+												<a class="dropdown-item" href="{{ path ('cart.html')}}">Mes achats</a>
+												<a class="dropdown-item" href="{{ path ('confirmation.html')}}">Confirmer</a>
+												<a class="dropdown-item" href="{{ path ('elements.html')}}">elements</a>
+											</div>
+										</li>
+										<li class="nav-item dropdown">
+											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+												Agenda
+											</a>
+											<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+												<a class="dropdown-item" href="{{ path ('blog.html')}}">
+													Agenda</a>
+												<a class="dropdown-item" href="{{ path ('single-blog.html')}}">Commentaires</a>
+											</div>
+										</li>
+
+
+										<li class="nav-item">
+											<a class="nav-link" href="{{ path ('contact.html')}}">Contact</a>
+										</li>
+									</ul>
+								</div>
+								<div class="hearer_icon d-flex align-items-center">
+									<a id="search_1" href="{{ asset ('javascript:void(0)')}}">
+										<i class="ti-search"></i>
+									</a>
+									<a href="{{ path ('cart.html')}}">
+										<i class="flaticon-shopping-cart-black-shape"></i>
+									</a>
+								</div>
+							</nav>
+						</div>
+					</div>
+				</body>
+			</html>
+		</body>
+	</html>
 </div>
+<div class="search_input" id="search_input_box">
+	<div class="container ">
+		<form class="d-flex justify-content-between search-inner">
+			<input type="text" class="form-control" id="search_input" placeholder="Search Here">
+			<button type="submit" class="btn"></button>
+			<span class="ti-close" id="close_search" title="Close Search"></span>
+		</form>
+	</div>
+</div>
+</body>
+</html>
+</header>
+<!-- Header part end-->
+{% endblock %}
+{% block main %}
+<!-- banner part start-->
+<section class="banner_part">
+<div class="container">
+<div class="row align-items-center">
+<div class="col-md-5">
+	<div class="banner_text">
+		<div class="banner_text_iner">
+			<h1>Les saveurs de l'orient</h1>
+			<p>Elegantes et puissantes, à savourer en calumet</p>
+			<a href="{{ asset ('product_list.html')}}" class="btn_1">découvrir</a>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+<div class="banner_img"><img src="{{ asset ('img/gal-1.jpeg')}}" alt="#" class="img-fluid">
+</div>
+</section>
+<!-- banner part start-->
+<!-- product list start-->
+<section class="single_product_list">
+<div class="container"><div class="row">
+<div class="col-lg-12">
+	<div class="single_product_iner">
+		<div class="row align-items-center justify-content-between">
+			<div class="col-lg-6 col-sm-6">
+				<div class="single_product_img">
+					<img src="{{ asset ('img/gal-2.jpeg')}}" class="img-fluid" alt="#">
+					<img src="{{ asset ('img/product_overlay.png')}}" alt="#" class="product_overlay img-fluid">
+				</div>
+			</div>
+			<div class="col-lg-5 col-sm-6">
+				<div class="single_product_content">
+
+					<h2>
+						<a href="{{ asset ('single-product.html')}}">Issue des quatre coins de la planète de l'ouest à l'est, du nord au sud en passant par nos boutiques</a>
+					</h2>
+					<a href="{{ asset ('product_list.html')}}" class="btn_3">Ici</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="single_product_iner">
+		<div class="row align-items-center justify-content-between">
+			<div class="col-lg-6 col-sm-6">
+				<div class="single_product_img">
+					<img src="{{ asset ('img/gal-3.jpeg')}}" class="img-fluid" alt="#">
+					<img src="{{ asset ('img/product_overlay.png')}}" alt="#" class="product_overlay img-fluid">
+				</div>
+			</div>
+			<div class="col-lg-5 col-sm-6">
+				<div class="single_product_content">
+					<h2>
+						<a href="{{ asset ('single-product.html')}}">A coeur ouvert de vous satisfaire</a>
+					</h2>
+					<a href="{{ asset ('product_list.html')}}" class="btn_3">Explorer</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="single_product_iner">
+		<div class="row align-items-center justify-content-between">
+			<div class="col-lg-6 col-sm-6">
+				<div class="single_product_img">
+					<img src="{{ asset ('img/gal-4.jpeg')}}" class="img-fluid" alt="#">
+					<img src="{{ asset ('img/product_overlay.png')}}" alt="#" class="product_overlay img-fluid">
+				</div>
+			</div>
+			<div class="col-lg-5 col-sm-6">
+				<div class="single_product_content">
+
+					<h2>
+						<a href="{{ asset ('single-product.html')}}">Favorisant l'agriculture responsable de nos terroirs</a>
+					</h2>
+					<a href="{{ asset ('product_list.html')}}" class="btn_3">acheter</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+</section>
+<!-- product list end-->
+<!-- trending item start-->
+<section class="trending_items">
+<div class="container">
+<div class="row">
+<div class="col-lg-12">
+	<div class="section_tittle text-center">
+		<h2>Produits du moment</h2>
+	</div>
+</div>
+</div>
+<div class="row">
+<div class="col-lg-4 col-sm-6">
+	<div class="single_product_item">
+		<div class="single_product_item_thumb">
+			<img src="{{ asset ('img/oil-1.jpeg')}}" alt="lemon-oil" class="img-fluid">
+		</div>
+		<h3>
+			<a href="{{ asset ('single-product.html')}}">Citronitron d'Italie</a>
+		</h3>
+
+	</div>
+</div>
+<div class="col-lg-4 col-sm-6">
+	<div class="single_product_item">
+		<img src="{{ asset ('img/oil-2.jpeg')}}" alt="#" class="img-fluid">
+		<h3>
+			<a href="{{ asset ('single-product.html')}}">Arbre à thé</a>
+		</h3>
+	</div>
+</div>
+<div class="col-lg-4 col-sm-6">
+	<div class="single_product_item">
+		<img src="{{ asset ('img/oil-3.jpeg')}}" alt="#" class="img-fluid">
+		<h3>
+			<a href="{{ asset ('single-product.html')}}">Lavande vraie</a>
+		</h3>
+	</div>
+</div>
+<div class="col-lg-4 col-sm-6">
+	<div class="single_product_item">
+		<img src="{{ asset ('img/oil-4.jpeg')}}" alt="#" class="img-fluid">
+		<h3>
+			<a href="{{ asset ('single-product.html')}}">Diffuse respi</a>
+		</h3>
+	</div>
+</div>
+<div class="col-lg-4 col-sm-6">
+	<div class="single_product_item">
+		<img src="{{ asset ('img/oil-5.jpeg')}}" alt="#" class="img-fluid">
+		<h3>
+			<a href="{{ asset ('single-product.html')}}">Gel antibactérien</a>
+		</h3>
+	</div>
+</div>
+<div class="col-lg-4 col-sm-6">
+	<div class="single_product_item">
+		<img src="{{ asset ('img/oil-6.jpeg')}}" alt="#" class="img-fluid">
+		<h3>
+			<a href="{{ asset ('single-product.html')}}">aCerola vitamine C</a>
+		</h3>
+	</div>
+</div>
+</div>
+</div>
+</section>
+<!-- trending item end-->
+<!-- client review part here -->
+<section class="client_review">
+<div class="container">
+<div class="row justify-content-center">
+<div class="col-lg-8">
+	<div class="client_review_slider owl-carousel">
+		<div class="single_client_review">
+			<div class="client_img">
+				<img src="{{ asset ('img/client.png')}}" alt="#">
+			</div>
+			<p>Un personnel au top pour des produits de malades</p>
+			<h5>- Dounia -</h5>
+		</div>
+		<div class="single_client_review">
+			<div class="client_img">
+				<img src="{{ asset ('img/client_1.png')}}" alt="#">
+			</div>
+			<p>J'ai plus mal aux couilles depuis que je mets 3 gouttes miracles avant de me coucher</p>
+			<h5>- Bryan -</h5>
+		</div>
+		<div class="single_client_review">
+			<div class="client_img">
+				<img src="{{ asset ('img/client_2.png')}}" alt="#">
+			</div>
+			<p>J'aime pas ces conneries, demande le remboursement</p>
+			<h5>- Guillaume -</h5>
+		</div>
+	</div>
+</div>
+</div>
+</div
+></section>
+<!-- client review part end -->
+<!-- feature part here -->
+<section class="feature_part section_padding">
+<div class="container">
+<div class="row justify-content-between">
+<div class="col-lg-6">
+	<div class="feature_part_tittle">
+		<h3>Innover de manière crédible les sources granulaires internes ou organiques</h3>
+	</div>
+</div>
+<div class="col-lg-5">
+	<div class="feature_part_content">
+		<p>Renforcer en toute transparence des stratégies de croissance bien étudiées et des sources biologiques et organiques.</p>
+	</div>
+</div>
+</div>
+<div class="row justify-content-center">
+<div class="col-lg-3 col-sm-6">
+	<div class="single_feature_part">
+		<img src="{{ asset ('img/icon/feature_icon_1.svg')}}" alt="#">
+		<h4>Support carte de crédit</h4>
+	</div>
+</div>
+<div class="col-lg-3 col-sm-6">
+	<div class="single_feature_part">
+		<img src="{{ asset ('img/icon/feature_icon_2.svg')}}" alt="#">
+		<h4>Commande en ligne</h4>
+	</div>
+</div>
+<div class="col-lg-3 col-sm-6">
+	<div class="single_feature_part">
+		<img src="{{ asset ('img/icon/feature_icon_3.svg')}}" alt="#">
+		<h4>Frais de port offerts</h4>
+	</div>
+</div>
+<div class="col-lg-3 col-sm-6">
+	<div class="single_feature_part">
+		<img src="{{ asset ('img/icon/feature_icon_4.svg')}}" alt="#">
+		<h4>carte cadeaux</h4>
+	</div>
+</div>
+</div>
+</div>
+</section>
+<!-- feature part end -->
+<!-- subscribe part here -->
+<section class="subscribe_part section_padding">
+<div class="container">
+<div class="row justify-content-center">
+<div class="col-lg-8">
+	<div class="subscribe_part_content">
+		<h2>Tiens toi au courant !</h2>
+		<p>Pour plus une vie plus saine, plus propre, responsable</p>
+		<div class="subscribe_form">
+			<input type="email" placeholder="Entre ton mail">
+			<a href="{{ asset ('#" class="btn_1')}}">Envoyer</a>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+</section>
+<!-- subscribe part end -->
+{% endblock %}
+{% block footer %}
+<!--::footer_part start::-->
+<footer class="footer_part">
+<div class="footer_iner">
+<div class="container">
+<div class="row justify-content-between align-items-center">
+	<div class="col-lg-8">
+		<div class="footer_menu">
+			<div
+				class="footer_logo">
+				<!-- <a href="{{ path ('index.html')}}"><img src="{{ asset ('img/logo.png')}}" alt="#"></a> -->
+			</div>
+			<div class="footer_menu_item">
+				<a href="{{ path ('index.html')}}">Accueil</a>
+				<a href="{{ path ('about.html')}}">A propos</a>
+				<a href="{{ path ('product_list.html')}}">Produits</a>
+				<a href="{{ asset ('#')}}">Pages</a>
+				<a href="{{ path ('blog.html')}}">Agenda</a>
+				<a href="{{ path ('contact.html')}}">Contact</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="social_icon">
+			<a href="{{ asset ('#')}}">
+				<i class="fab fa-facebook-f"></i>
+			</a>
+			<a href="{{ asset ('#')}}">
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="{{ asset ('#')}}">
+				<i class="fab fa-google-plus-g"></i>
+			</a>
+			<a href="{{ asset ('#')}}">
+				<i class="fab fa-linkedin-in"></i>
+			</a>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+<div class="copyright_part">
+<div class="container">
+<div class="row ">
+	<div class="col-lg-12">
+		<div class="copyright_text">
+			<P>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				Copyright &copy;<script>
+					document.write(new Date().getFullYear());
+				</script>
+				All rights reserved | 
+				<i class="ti-heart" aria-hidden="true"></i>
+				<a href="{{ asset ('https://colorlib.com')}}" target="_blank">Adame, Dounia, Bryan et Guillaume</a>
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			</P>
+			<div class="copyright_link">
+				<a href="{{ asset ('#')}}">Thermes et conditions</a>
+				<a href="{{ asset ('#')}}">FAQ</a>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+</footer>
+<!--::footer_part end::-->
+{% endblock %}
+{% block javascript %}
+<!-- jquery plugins here-->
+<script src="{{ asset ('js/jquery-1.12.1.min.js')}}">
+</script>
+<!-- popper js -->
+<script src="{{ asset ('js/popper.min.js')}}">
+</script><!-- bootstrap js -->
+<script src="{{ asset ('js/bootstrap.min.js')}}">
+</script><!-- magnific popup js -->
+<script src="{{ asset ('js/jquery.magnific-popup.js')}}">
+</script><!-- carousel js -->
+<script src="{{ asset ('js/owl.carousel.min.js')}}">
+</script><script src="{{ asset ('js/jquery.nice-select.min.js')}}">
+</script><!-- slick js --><script src="{{ asset ('js/slick.min.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.counterup.min.js')}}">
+</script>
+<script src="{{ asset ('js/waypoints.min.js')}}">
+</script>
+<script src="{{ asset ('js/contact.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.ajaxchimp.min.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.form.js')}}">
+</script>
+<script src="{{ asset ('js/jquery.validate.min.js')}}">
+</script>
+<script src="{{ asset ('js/mail-script.js')}}">
+</script>
+<!-- custom js -->
+<script src="{{ asset ('js/custom.js')}}">
+</script>
+
+
 {% endblock %}
