--- a/templates/panier/index2.html.twig
+++ b/templates/panier/index2.html.twig
@@ -107,91 +107,75 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner">
-                        <h2>Panier</h2>
+                        <h2>cart list</h2>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="cart_area section_padding">
-    <div class="container">
-      <div class="cart_inner">
-        <div class="table-responsive">
-          <table class="table">
+  <div class="container">
+    {% if items | length > 0 %}
+        <table class="table">
             <thead>
-              <tr>
-                <th scope="col">Produit</th>
-                <th scope="col">Description</th>
-                <th scope="col">Prix</th>
-                <th scope="col">Quantité</th>
-              </tr>
+                <tr>
+                    <th scope="col">Produit</th>
+                    <th scope="col">Image</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Prix</th>
+                    <th scope="col">Quantité</th>
+                    <th scope="col">Total</th>
+                </tr>
             </thead>
             <tbody>
-            {% for item in items %}
+                {% for item in items %}
                     {% if  item.produits is not null %}
-              <tr>
-                <td>
-                  <div class="media">
-                    <div class="d-flex">
-                      <img src="img/" alt="" />
-                    </div>
-                    <div class="media-body">
-                      <p>{{ item.produits.nom }}</p>
-                      <td>{{ item.produits.description }}</td>
-                    </div>
-                    
-                  </div>
-                </td>
-                <td>
-                  <h5>{{ item.produits.prix }}</h5>
-                </td>
-                <td>
-                
-                  <div class="product_count">
-                  
-                    <span class="input-number-decrement">
-                     <i class="ti-minus">
-                     </i>
-                     </span>
-                     {{ item.quantity }}
-                    <input class="input-number" type="text" value="" min="1" max="10">
-                    <span class="input-number-increment">
-                     <i class="ti-plus">
-                     </i>
-                     </span>
-                  </div>
-                </td>
-                
-              </tr>
-              <tr class="bottom_button">
-                
-                <td>
-                  <div class="cupon_text float-right">
-                    <a href="{{ path('panier_subtract', {'id': item.produits.id})}}" class="btn">
-                    <i class="fas fa-trash"></i>
-                    </a>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                
-                <td>
-                  <h5>{{ item.produits.prix * item.quantity }}</h5>
-                </td>
-              </tr>
-              
-              {% endif %}
+                        <tr>
+                            <td>{{ item.produits.nom }}</td>
+                            <td>{{ item.produits.image }}</td>
+                            <td>{{ item.produits.description }}</td>
+                            <td>{{ item.produits.prix }}</td>
+                            <td>
+                            {{ item.quantity }}
+                            <div class="product_count">
+                      <span class="input-number-decrement"> 
+                      <i class="ti-minus">
+                      </i>
+                      </span>
+                      <input class="input-number" type="text" value="1" min="0" max="10">
+                      <span class="input-number-increment"> <i class="ti-plus">
+                      </i>
+                      </span>
+                      </div>
+                            </td>
+                            <td>{{ item.produits.prix * item.quantity }}
+                            </td>
+                            <td>
+                                <a href="{{ path('panier_subtract', {'id': item.produits.id})}}" class="btn">Enlever un article</a>
+                            </td>
+                            <td>
+                                <a href="{{ path('panier_remove', {'id': item.produits.id})}}" class="btn btn-danger btn-sm">
+                                    <i class="fas fa-trash"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    {% endif %}
                 {% endfor %}
             </tbody>
-          </table>
-          <div class="checkout_btn_inner float-right">
-            <a class="btn_1" href="#">Continuer</a>
-            <a class="btn_1 checkout_btn_1" href="#">Accéder au paiement</a>
-          </div>
+            <tfoot>
+                <tr>
+                    <td colspan="5">Total : </td>
+                    <td>{{ totalPrice }}</td>
+                    <td></td>
+                </tr>
+            </tfoot>
+        </table>
+    {% else %}
+        <p>Votre panier est vide</p>
         </div>
-      </div>
-  </section>
+    {% endif %}
+
+
 {% endblock %}
 {% block footer %}
     <footer class="footer_part">
